@@ -322,6 +322,10 @@ int main(int argc, char * argv[])
 	log("Converting governments.\n");
 	printf("Converting governments.\n");
 	destWorld.convertGovernments(religionGroupMap);
+
+	log("Converting economies.\n");
+	printf("Converting economies.\n");
+	destWorld.convertEconomies();
 	
 
 	// Output results
